# chemlift

./: .bumpversion.cfg  .gitignore  .langchain.db  .readthedocs.yml  LICENSE  README.md  setup.cfg  tox.ini
.github/: CONTRIBUTING.md
chemlift/: .cruft.json  CITATION.cff
chemlift/docs/source/: index.rst  installation.rst
chemlift/src/chemlift/: peft_transformers.py
docs/source/: api.rst  conf.py  index.rst  references.rst  usage.rst
experiments/: compile_results.ipynb  run_experiments_anthropic.py  run_experiments_hugginface.py  run_experiments_openai.py
experiments/scaling/: load_results.ipynb  pythia.py
src/chemlift/: __init__.py  errorestimate.py  peftmodels.py  utils.py  version.py
src/chemlift/finetune/: peft_transformers.py  peftmodels.py
src/chemlift/icl/: fewshotclassifier.py  fewshotpredictor.py  fewshotregressor.py  utils.py
tests/: __init__.py  conftest.py  test_errorestimate.py  test_version.py
tests/icl/: test_fewshotclassifier.py  test_fewshotpredictor.py
