##########################
# Setup.py Configuration #
##########################
[metadata]
name = chemlift
version = 0.0.1-dev
description = Chemical language interfaced predictions using large-language models
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/lamalab-org/chemlift
download_url = https://github.com/lamalab-org/chemlift/releases
project_urls =
    Bug Tracker = https://github.com/lamalab-org/chemlift/issues
    Source Code = https://github.com/lamalab-org/chemlift

# Author information
author = Kevin Maik Jablonka
author_email = mail@kjablonka.com
maintainer = Kevin Maik Jablonka
maintainer_email = mail@kjablonka.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords = 
    llm 
    chemistry
    lift



[options]
install_requires =
    more_itertools
    tqdm
    transformers
    peft
    gptchem
    datasets
    accelerate
    bitsandbytes
    matplotlib

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    sphinx_automodapi
    texext
augmentation = 
    deepsmiles
    selfies



######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = chemlift
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/chemlift
    .tox/*/lib/python*/site-packages/chemlift

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError


##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short

[tool.ruff]
exclude = 
    ".tox"
    ".git"
    "__pycache__"
    "docs/source/conf.py"
    "build"
    "dist"
    "tests/fixtures/*"
    "*.pyc"
    "*.egg-info"
    ".cache"
    ".eggs"
    "data"
line-length = 120
select = 
    "C9"
    "E"
    "F"
    "W"

[tool.ruff.mccabe]
max-complexity = 20